--- a/templates/Pages/Acceuil.html.twig
+++ b/templates/Pages/Acceuil.html.twig
@@ -1,4 +1,3 @@
-{% apply inline_css(source("styles.css")) %}
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/html" lang="en">
 <head>
@@ -9,10 +8,9 @@
     {% block stylesheets %}{% endblock %}
 </head>
     <body>
-        
-    <nav class="navbar">
+    <nav class="navbar navbar-expand-lg navbar-light bg-info">
         <a class="navbar-brand" href="">Prestige</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -25,19 +23,18 @@
             {% if app.user %}
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="{{ path('security_logout') }}" class = "nav-link">Se Déconnecter</a>
+                        <a href="{{ path('security_login') }}" class = "nav-link">Se Déconnecter</a>
                     </li>
                 </ul>
-            {% endif %}
+                {% endif %}
+                
+            
         </div>
     </nav>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-     
-   
-    </body>
-</html>
-{% endapply %}
+
+    <div>
+            <img src="login.JPG">   
+            <p1>Nom d'utiliateur: {{app.user.username}} </p1><br>
+            <p1>Email : {{app.user.email}} </p1>
+    </div>
+</body>
