--- a/templates/Pages/Acceuil.html.twig
+++ b/templates/Pages/Acceuil.html.twig
@@ -1,40 +1,138 @@
+{% apply inline_css(source("stylesA.css")) %}
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/html" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Welcome!{% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
+    <script>
+    $(document).ready(function(){
+        // Add minus icon for collapse element which is open by default
+        $(".collapse.show").each(function(){
+        	$(this).prev(".card-header").find(".fa").addClass("fa-minus").removeClass("fa-plus");
+        });
+        
+        // Toggle plus minus icon on show hide of collapse element
+        $(".collapse").on('show.bs.collapse', function(){
+        	$(this).prev(".card-header").find(".fa").removeClass("fa-plus").addClass("fa-minus");
+        }).on('hide.bs.collapse', function(){
+        	$(this).prev(".card-header").find(".fa").removeClass("fa-minus").addClass("fa-plus");
+        });
+    });
+    </script>
     {% block stylesheets %}{% endblock %}
 </head>
-    <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-info">
-        <a class="navbar-brand" href="">Prestige</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <body class="conteneur">
+    
+            <nav class="navbar navbar-expand-lg navbar-light bg-info shadow-lg p-3 mb-5  rounded">
+                <a class="navbar-brand" href="">Prestige</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" {% if current_menu is defined and current_menu == 'properties'  %} active {% endif %} href="">Acheter</a>
-                </li>
-            </ul>
-            {% if app.user %}
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a href="{{ path('security_login') }}" class = "nav-link">Se Déconnecter</a>
-                    </li>
-                </ul>
-                {% endif %}
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" {% if current_menu is defined and current_menu == 'properties'  %} active {% endif %} href="">Acheter</a>
+                        </li>
+                    </ul>
+                    {% if app.user %}
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a href="{{ path('security_login') }}" class = "nav-link"><strong>Se Déconnecter</strong></a>
+                            </li>
+                        </ul>
+                        {% endif %}
+                        
+                    
+                </div>
+            </nav>
+
+
+        <div class="main"> 
+            <div class="menu shadow-lg p-3 mb-5  rounded">
+                    <font style="vertical-align: inherit;"><strong>Rechercher :</strong> </font><br>
+                    <font style="vertical-align: inherit;">Enseignant</font>
+                        <form class="form-inline md-form mr-auto mb-4">
+                            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                        <center><button class="btn btn-outline-warning btn-rounded btn-sm my-0" type="submit">Search</button></center>
+                        </form>
+                    <font style="vertical-align: inherit;">Etudiant</font>
+                        <form class="form-inline md-form mr-auto mb-4">
+                            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                            <center><button class="btn btn-outline-warning btn-rounded btn-sm my-0" type="submit">Search</button></center>
+                        </form>
+                    <font style="vertical-align: inherit;">Tutoriel</font>
+                        <form class="form-inline md-form mr-auto mb-4">
+                            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                        <center><button class="btn btn-outline-warning btn-rounded btn-sm my-0" type="submit">Search</button></center>
+                        </form>
+            </div>
+            <div class="menu1 shadow p-3 mb-5 bg-white rounded">
                 
-            
-        </div>
-    </nav>
+                <div class="bs-example">
+                    <div class="accordion" id="accordionExample">
+                        <div class="card">
+                            <div class="card-header" id="headingOne">
+                                <h2 class="mb-0">
+                                    <button type="button" class="btn btn-link" data-toggle="collapse" data-target="#collapseOne"><i class="fa fa-plus"></i> Gérer les Etudiants</button>									
+                                </h2>
+                            </div>
+                            <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    <p>HTML stands for HyperText Markup Language. HTML is the standard markup language for describing the structure of web pages. <a href="https://www.tutorialrepublic.com/html-tutorial/" target="_blank">Learn more.</a></p>
+                                    
+                                    <button type="button" class="btn btn-success">Inscrire</button>
+                                    <button type="button" class="btn btn-success">Modifier</button>
+                                    <button type="button" class="btn btn-success">Supprimer</button>
 
-    <div>
-            <img src="login.JPG">   
-            <p1>Nom d'utiliateur: {{app.user.username}} </p1><br>
-            <p1>Email : {{app.user.email}} </p1>
-    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header" id="headingTwo">
+                                <h2 class="mb-0">
+                                    <button type="button" class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"><i class="fa fa-plus"></i> Gérer les Enseignants</button>
+                                </h2>
+                            </div>
+                            <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    <p>Bootstrap is a sleek, intuitive, and powerful front-end framework for faster and easier web development. It is a collection of CSS and HTML conventions. <a href="https://www.tutorialrepublic.com/twitter-bootstrap-tutorial/" target="_blank">Learn more.</a></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header" id="headingThree">
+                                <h2 class="mb-0">
+                                    <button type="button" class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"><i class="fa fa-plus"></i> What is CSS?</button>                     
+                                </h2>
+                            </div>
+                            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    <p>CSS stands for Cascading Style Sheet. CSS allows you to specify various style properties for a given HTML element such as colors, backgrounds, fonts etc. <a href="https://www.tutorialrepublic.com/css-tutorial/" target="_blank">Learn more.</a></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <footer class="foot shadow-lg p-3 mb-5  rounded">
+                <center>
+                <p>Author: Ib.dicko: <a href="mailto:hege@example.com">idicko321@gmail.com</a></p>
+                </center>
+            </footer>
+
+        </div>
+        
+        
+        
 </body>
+<html>
+{% endapply %}
