--- a/templates/stylesA.css
+++ b/templates/stylesA.css
@@ -1,41 +1,47 @@
-body{
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
+html, body{
+    height:100%;}
+.conteneur{
+    background-color: teal;
 }
 
-#deconn{
-    background-color: violet;
+.bd-sidebar {
+    position: sticky;
+    
 }
 
-#piedpage {
-    display: inline;
-  }
+.menu{
+    border-radius: 50px;
+    float: left;
+    width: 300px;
+    background-color: rgba(9, 175, 175, 0.829);
+    height: 550px;
+}
+.main{
+    height: 100%;
+    width: 100%;
+}
+
+.menu1{
+    height: 550px;
+    background-color: white;
+
+}
 
 .navbar{
-        background-color: #636ac09d;
+        background-color: #3a45be9d;
         top: 10px;
         border-radius: 20px;
 }
 
-.footer {
-    padding: 20px;
+.foot {
     text-align: center;
-    background: #ddd;
-    max-width:50%;
-    bottom: 0px;
+    background: rgba(9, 175, 175, 0.829);
+    max-width:100%;
 }
-.card {
-    background-color: white;
-    padding: 20px;
-    margin-top: 20px;
-    border: 2px solid blue;
+
+.bs-example{
+    margin: 20px;
 }
-/* Right column */
-.rightcolumn {
-    float: left;
-    width: 25%;
-    padding-left: 20px;
-    height: 100;
-    overflow: auto;
-  }
+.accordion .fa{
+    margin-right: 0.5rem;
+}
