--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -28,11 +28,14 @@
                     <div class="form-label-group">
                     <input type="password" id="inputPassword" class="form-control" placeholder="Mot de passe..." required name="_password">
                     </div>
-    
+                    <!-- Remember password
+
                     <div class="custom-control custom-checkbox mb-3">
                     <input type="checkbox" class="custom-control-input" id="customCheck1">
                     <label class="custom-control-label" for="customCheck1">Remember password</label>
                     </div>
+
+                    --> 
                     <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
                     <hr class="my-4">
                 </form>
@@ -44,12 +47,6 @@
    
   </body>
        
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a href="{{ path('security_registration') }}" class = "nav-link">S'Inscrire</a>
-                    </li>
-                </ul>
-
         {% block javascripts %}{% endblock %}
        
             
