--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -1,17 +1,36 @@
-{% extends 'base.html.twig' %}
+{% include "security/vuebase.html.twig" %}
 
-{% block body %}
-
-    <h1>Inscription sur le site</h1>
+<div class="menu1 shadow p-3 mb-5 bg-white rounded card">
+    <div class="form-group">
+        
+                    <h1>Création d'un utilisateur/h1>
+        
+        {{ form_start(form) }}
+        <div class="row">
+            <div class="col-md-5">
+                {{ form_row(form.username,{'label': "Nom d\'utilisateur",'attr':{'placeholder':"Nom d'utilisateur..."}}) }}
+            </div>
+            <div class="col-md-5">
+                {{ form_row(form.email,{'label': "Email",'attr':{'placeholder':"Email..."}}) }}
+            </div>
+            <div class="col-md-5">
+                {{ form_row(form.password,{'label': "Mot de passe",'attr':{'placeholder':"Mot de passe..."}}) }}
+            </div>
+            <div class="col-md-5">
+                {{ form_row(form.confirm_password,{'label': "Confirmation",'attr':{'placeholder':"Répétez votre mot de passe..."}}) }}
+            </div>
+            
+            
+            <div class="col-md-10">
+                <center>
+                <button type="submit" class="btn btn-success btn-lg btn-block">Créer!</button>
+                </center>
+        </div>
+        
+        
+        
+    </div>
+        {{ form_end(form) }}
     
-    {{ form_start(form) }}
-
-    {{ form_row(form.username,{'label': "Nom d\'utilisateur",'attr':{'placeholder':"Nom d'utilisateur..."}}) }}
-    {{ form_row(form.email,{'label': "Email",'attr':{'placeholder':"Email..."}}) }}
-    {{ form_row(form.password,{'label': "Mot de passe",'attr':{'placeholder':"Mot de passe..."}}) }}
-    {{ form_row(form.confirm_password,{'label': "Confirmation",'attr':{'placeholder':"Répétez votre mot de passe..."}}) }}
-    
-
-    <button type="submit" class="btn btn-success">Inscription!</button>
-    {{ form_end(form) }}
-{% endblock %}
+    </div>
+</div>
