--- a/templates/styles.css
+++ b/templates/styles.css
@@ -27,8 +27,8 @@ body{
   }
   
   body {
-    background: #007bff;
-    background: linear-gradient(to right, #0062E6, #33AEFF);
+    background: #14a8016e;
+    background: linear-gradient(to right, #00e63a8a, #029b4f);
   }
   
   .card-signin {
